--- a/jekyll/_assets/css/2-modules/logout-modal.sass
+++ b/jekyll/_assets/css/2-modules/logout-modal.sass
@@ -1,25 +1,36 @@
-.logout-cont
-  font-size: 1rem
-  padding: 1em
+logout-modal
+  &.ng-enter
+    z-index: 100
+    display: block
+    position: fixed
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    transition: opacity 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940)
 
-  h3
-    margin-top: 0.3em
+  .logout-cont
+    font-size: 1rem
+    padding: 1em
 
-  .buttons
-    +clearfix
+    h3
+      margin-top: 0.3em
 
-    button
-      padding: 0.5em 2em
-      border: none
-      outline: none
-      cursor: pointer
-      color: white
-      font-weight: bold
+    .buttons
+      +clearfix
 
-    .yes
-      float: right
-      background: $primary-color
+      button
+        padding: 0.5em 2em
+        border: none
+        outline: none
+        cursor: pointer
+        color: white
+        font-weight: bold
 
-    .no
-      float: left
-      background: $secondary-color
+      .yes
+        float: right
+        background: $primary-color
+
+      .no
+        float: left
+        background: $secondary-color
